feat: login with rollable handles
